--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-#NEXT_PUBLIC_API=http://localhost:8000/api
-NEXT_PUBLIC_API=https://shy-cow-44.loca.lt/api
+# NEXT_PUBLIC_API=http://localhost:8000/api
+NEXT_PUBLIC_API=http://19d0-2001-448a-20a0-5fce-d416-a7be-8a9d-869b.ngrok.io
