--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 # NEXT_PUBLIC_API=http://localhost:8000/api
 NEXT_PUBLIC_API=https://75a1-2001-448a-20a0-5fce-147-184b-dc5e-2655.ap.ngrok.io/api
+NEXT_PUBLIC_SOCKETIO=https://75a1-2001-448a-20a0-5fce-147-184b-dc5e-2655.ap.ngrok.io
